[gd_scene load_steps=4 format=3 uid="uid://dh8ijwlsvhect"]

[ext_resource type="Script" uid="uid://cpvidm0p3i3us" path="res://rescue_event.gd" id="1_ok7o1"]
[ext_resource type="PackedScene" uid="uid://hw6s2crnu56b" path="res://src/ui/interaction_timer.tscn" id="2_p6w40"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ok7o1"]
radius = 50.0

[node name="RescueEvent" type="Node2D"]
script = ExtResource("1_ok7o1")

[node name="Sprite2D" type="Sprite2D" parent="."]
hframes = 4

[node name="RescueArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="RescueArea"]
shape = SubResource("CircleShape2D_ok7o1")

[node name="InteractionTimer" parent="RescueArea" instance=ExtResource("2_p6w40")]
anchors_preset = 6
anchor_left = 1.0
anchor_right = 1.0
offset_left = -14.0
offset_top = -100.0
offset_bottom = -86.0
grow_horizontal = 0

[connection signal="body_entered" from="RescueArea" to="." method="_on_rescue_area_body_entered"]
[connection signal="body_exited" from="RescueArea" to="." method="_on_rescue_area_body_exited"]
[connection signal="on_time_timeout" from="RescueArea/InteractionTimer" to="." method="_on_interaction_timer_on_time_timeout"]
